Eliminated vnafile_parameter_t and vnafile_coordinates_t
This is a pretty significant clean-up within vnafile_*.  Before,
we had the parameter-type enum, vnadata_parameter_type_t and we had
another enum, vnafile_parameter_type that started out the same, but then
extended it with IL (insertion loss), RL (return loss), PRC (paralle
R-C), PRL (parallel-RL), etc. types.  That raised the question: were
these additions special matrix types, or we were simply just alternative
output formats such as real-imaginary vs. magnitude-angle?  This commit
settles the question, deciding that they're the later.  So now we have
just vnadata_parameter_type_t and a new enum, vnafile_format_type_t,
containing DB-ANGLE, MAG-ANGLE, IL, RL, PRC, PRL, VSWR, etc.  Fixed
several bugs in vnafile_load and vnafile_save.

There are no API changes.  The only external difference is that
vnafile_set_format now accepts just "db", "ma" and "ri" without a
parameter type, taking the paramter type from the given vnadata_t
object.

Replaced the vnafile-example program -- it's now a useful tool that
converts between network parameter types and between touchstone and
native formats.

--- a/TODO
+++ b/TODO
@@ -2,13 +2,15 @@
   of vnafile_parameter_t.  Eliminate vnafile_parameter_t by making PRL,
   SRC, VSWR, etc. info "coordinates".  Rename vnafile_coordinates_t
   to vnafile_format_type_t.
+  DONE
+
+- Improve vnafile-example
+  DONE
 
 - Inspect all malloc, calloc and realloc calls for size zero (which can
   legally return NULL).
 
 - Add vnadata-test
-
-- Improve vnafile-example
 
 - Consider making vnaproperty public: write vnaproperty.3 man page and
   example program.
