--- a/src/vnafile.3
+++ b/src/vnafile.3
@@ -163,7 +163,7 @@ with the following optional coordinate system modifiers:
 .TS
 l l.
 ri	real, imaginary
-ma	magnitude, agnel
+ma	magnitude, angle
 dB	decibels, angle
 .TE
 .in -4n
