Minor documentation fixes only

--- a/src/vnacal.3
+++ b/src/vnacal.3
@@ -257,7 +257,7 @@ The next step is to make VNA calibration measurements using known
 standards and add them to the \fBvnacal_calset_t\fP object.
 Each element of the calibration matrix contains three calibration
 terms.
-The diagonal elements, i,i, contain the reflected values from each of the
+The diagonal elements, i,i, contain the reflected values from each of
 three reference standards, while the off diagonal elements, i,j contain
 through and leakage measurements for port j driving signal to port i.
 Calibration progresses as follows.
